--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             </div>
           </div>
           <div style="display:inline-block; width:30%;margin-top:10px;">
-            <img src="images\beni.jpg" width="200" alt="familia"></div>
+            <img src="images\benito.jpg" width="200" alt="familia"></div>
           </div>
 
           <div>
